--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "aws-sdk": "^2.1692.0",
     "body-parser": "^1.20.3",
     "express": "^4.21.1",
+    "multer": "^1.4.5-lts.1",
     "mysql": "^2.18.1"
   }
 }
